--- a/readData.Rmd
+++ b/readData.Rmd
@@ -198,9 +198,23 @@ We can use the *haven* package we used to read files saved for use in SPSS to wr
 write_sav(UndSoc.4, "myData/UndSoc.4.sav")
 ```
 
+### Saving an object as an RDS file
+
+Finally, we can just save a file for future use in R as an RDS file.
+
+```{r}
+saveRDS(UndSoc.4, "myData/UndSoc.4.rds")
+```
+
 ### Loading these datasets back into R
 
 To read any of these datasets back into R, use what you learnt in *Reading common data files into R*.
+
+When loading an RDS file back into R, simply use the **readRDS()** command.
+
+```{r}
+RDS <- readRDS("myData/UndSoc.4.rds")
+```
 
 ## Saving the working environment
 
